implemented startsWith search
